some more updates

--- a/02_2Ddesign/index.html
+++ b/02_2Ddesign/index.html
@@ -50,23 +50,36 @@
 
 This is the box: 
 <img src="./BoxFinalImage.jpeg" alt="Picture of my tool box" class="tool-box-pic">
+<p class="margin">   </p>
 
 Process:
+<p class="margin">   </p>
 
 At first I wanted to make a box with a butterfly shaped bottom. The challenge of that design would be making curved edges where the wings were. We learned about 'living hinges' as a way to make flat surfaces like wood and carboard curve
 
-
+<p class="margin">   </p>
 
 <h3>Assignment 2: Fusion 360 Tutorial</h3>
+
+<p class="margin">   </p>
 
 Here is what I made by following the tutorial:
 <img src="./NotchPic.jpeg" alt="i promise i finished this tutorial" class="notch-pic">
 
+<p class="margin">   </p>
 
 <h3>Assignment 3: Fusion Modeling</h3>
 
+<p class="margin">   </p>
+
 I've made a screw:
 <img src="./ScrewPicture.jpg" alt="screw loose" class="screw-pic">
+
+<p class="margin">   </p>
+
+I also made a glass from my hotel room: 
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991365605" height="510" width="450" frameborder="0" scrolling="no" ></iframe>
 
 
 
