--- a/08_cnc/index.html
+++ b/08_cnc/index.html
@@ -39,40 +39,79 @@
 
 <h3>Assignment: Make Something With CNC</h3>
 
-<h4> Alrighty so it's cnc week, and once again, I'm starting way too late on this assingment. However, I know what I would like to do! I really need a place to store my headphones in my dorm, because currently there's no place for them in my room. I'm currently on pinterest and this is what I'm going for: 
 
-<img src="./PinterestWallMount.jpeg" alt="I searched up 'headphone wall mount' on pinterest"  class="tool-box-pic">
+ <p class = "margin"></p>
 
-Okay? However here's the catch: I would like for it to be in the shape of the letter 'O' because that's the first initial of my last name! but also, if it goes well, maybe I'll make the letter 'A' as well? My first name starts with the letter A. That would be cute because my partner's first initial is 'O,' so maybe we can have matching headphone wall mounts where mine says 'A' and his says 'O'. OK. Let's get started....<br></br>
 
-It honestly took me a while to try and use fusion 360 to come up with a design so I'm going to use the STL file from this design as a starting off point: 
+<h4> My origninal idea was to make some sort of headphone holders for my room using my monogram. here is the inspiration: 
 
-<img src="./WallMountStartingPoint.jpeg" alt="Wall Mount Starting Point"  class="tool-box-pic">
 
-I feel as though it looks super similar to the letter o shape that I'm going for. Here's the link where I found it: https://www.thingiverse.com/thing:2835111<br></br>
+ <p class = "margin"></p>
 
-Okay I've used this STL file as a base for my initials: 
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=112027110978390103" height="445" width="345" frameborder="0" scrolling="no" ></iframe>
 
-<div class="container mt-4">
-    <div class="row">
-      <!-- First Image -->
-      <div class="col-md-4">
-        <img src="./AO1.jpeg" alt="AO1" class="img-fluid">
-      </div>
-      <!-- Second Image -->
-      <div class="col-md-4">
-        <img src="./AO2.jpeg" alt="AO2" class="img-fluid">
-      </div>
-      <!-- Third Image -->
-      <div class="col-md-4">
-        <img src="./AO3.jpeg" alt="AO3" class="img-fluid">
-      </div>
-    </div>
-  </div>
 
-  Now I need to learn how to turn this into a mold... My plan is to 3-d print these models and then vaccuum form them. let's do it. <br></br>
+ <p class = "margin"></p>
 
-  The STL file is too large to print so actually there's going to be a plan b!
+
+
+And I used this STL file:  https://www.thingiverse.com/  as a base for my initials: 
+
+
+ <p class = "margin"></p>
+
+
+
+<h4>
+
+but I never ended up printing it... SO I CNC'd something for my final project instead. I needed a base for my drawing machine to ease transport and also have a guaranteed hard drawing surface. this will also allow for the ability of having clamps that clamp the piece of paper to the wooden bottom: 
+
+
+ <p class = "margin"></p>
+
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991366868" height="415" width="236" frameborder="0" scrolling="no" ></iframe>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991366869" height="415" width="236" frameborder="0" scrolling="no" ></iframe>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991366867" height="415" width="236" frameborder="0" scrolling="no" ></iframe>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991366874" height="415" width="236" frameborder="0" scrolling="no" ></iframe>
+
+
+
+ <p class = "margin"></p>
+
+The next steps would be to sand and stain it, and then add metal clamp!
+
+ <p class = "margin"></p>
+
+<h3> Post Processing </h3>
+
+<h4> 
+ <p class = "margin"></p>
+
+
+I didn't post process my base, but I did post process california! Here are pictures of me using the vacuum former. 
+
+
+ <p class = "margin"></p>
+
+
+
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991366967" height="415" width="236" frameborder="0" scrolling="no" ></iframe>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991366965" height="415" width="236" frameborder="0" scrolling="no" ></iframe>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991366970" height="415" width="236" frameborder="0" scrolling="no" ></iframe>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991366966" height="415" width="236" frameborder="0" scrolling="no" ></iframe>
+
+
+ <p class = "margin"></p>
+
+
 
 
 </div>
