some tweaks to the code of some stuff!!

--- a/05_3Ddesign/index.html
+++ b/05_3Ddesign/index.html
@@ -114,6 +114,14 @@ So I used it for holding screws in later weeks:
 
 <p class="margin">   </p>
 
+Okay so you guys want the stl file? here it is: 
+
+<p>Okay so you guys want the STL file? Here it is:</p>
+<a href="./cat_bowl.stl" download="cat_bowl.stl" class="download-btn">
+  Download STL File
+</a>
+
+
 
 
 
