--- a/07_outputs/index.html
+++ b/07_outputs/index.html
@@ -42,7 +42,9 @@
 
 <h3>Assignment: Minimum Viable Product for Final Project</h3>
 
-Okay so apparently everyone wants to know about my final project and here's what I have so far: 
+<p class="margin">   </p>
+
+<h4> Check out my final project page in the top right corner!
 
 
 
