--- a/09_networking/index.html
+++ b/09_networking/index.html
@@ -52,6 +52,7 @@
 
   This week my partner was Katie Mueller and we decided to use ESP32 networking to control a stepper motor with our computer. Here is the code that we used to make that work: 
 
+<div class="scrollable-container">
 <pre><code class="language-cpp">
 
   #include <WiFi.h>
@@ -138,6 +139,8 @@ void setup() {
 }
 
  </code></pre>
+
+ </div>
 
 Unfortunately, we don't have a video from this week, however I did end up using this technology in my final project. 
 
