--- a/02_2Ddesign/index.html
+++ b/02_2Ddesign/index.html
@@ -55,7 +55,41 @@ This is the box:
 Process:
 <p class="margin">   </p>
 
-At first I wanted to make a box with a butterfly shaped bottom. The challenge of that design would be making curved edges where the wings were. We learned about 'living hinges' as a way to make flat surfaces like wood and carboard curve
+At first I wanted to make a box with a butterfly shaped bottom. The challenge of that design would be making curved edges where the wings were. We learned about 'living hinges' as a way to make flat surfaces like wood and carboard curve.
+
+<p class="margin">   </p>
+
+here is an example of a living hinge: 
+
+
+<p class="margin">   </p>
+
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991384569" height="373" width="345" frameborder="0" scrolling="no" ></iframe>
+
+
+
+<p class="margin">   </p>
+
+Now I'm just going to show a bunch of pictures of my process: 
+
+<p class="margin">   </p>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991384523" height="415" width="236" frameborder="0" scrolling="no" ></iframe>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991384521" height="415" width="236" frameborder="0" scrolling="no" ></iframe>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991384515" height="415" width="236" frameborder="0" scrolling="no" ></iframe>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991384512" height="415" width="236" frameborder="0" scrolling="no" ></iframe>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991384508" height="415" width="236" frameborder="0" scrolling="no" ></iframe>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991384502" height="415" width="236" frameborder="0" scrolling="no" ></iframe>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991384501" height="415" width="236" frameborder="0" scrolling="no" ></iframe>
+
+
 
 <p class="margin">   </p>
 
