gettin' closer to the end

--- a/04_microcontroller/index.html
+++ b/04_microcontroller/index.html
@@ -85,6 +85,10 @@ void loop() {
 
 <p class="margin">   </p>
 
+Here is my Circuit Schematic: 
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991386220" height="343" width="345" frameborder="0" scrolling="no" ></iframe>
+
 
 
 
