--- a/05_3Ddesign/index.html
+++ b/05_3Ddesign/index.html
@@ -31,6 +31,13 @@
        <br>Week 5: 3D Design & Printing.
       </h2>
   </div>
+  <div class="index-links">
+  <h4>Index</h4>
+  <ul>
+    <li><a href="#assignment-model">Model and 3D Print</a></li>
+    <li><a href="#assignment-scan">Scan Something</a></li>
+  </ul>
+</div>
 </nav>
 
 <body>
@@ -39,7 +46,7 @@
 <p class="margin">   </p>
 
 
-<h3>Assignment: Model and 3D print something</h3>
+<h3 id="assignment-model">Assignment: Model and 3D print something</h3>
 
 <h4>
   
@@ -114,14 +121,42 @@ So I used it for holding screws in later weeks:
 
 <p class="margin">   </p>
 
-Okay so you guys want the stl file? here it is: 
+Okay so I tweaked my design, added ears and cute little feet!! I love it so much and forgot to take pictures of it in action but here are the fusion models and prusa slicer renders: 
 
-<p>Okay so you guys want the STL file? Here it is:</p>
+<p class="margin">   </p>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991386447" height="377" width="345" frameborder="0" scrolling="no" ></iframe>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991386454" height="403" width="345" frameborder="0" scrolling="no" ></iframe>
+
+<p class="margin">   </p>
+
+
+<h4>Okay so you guys want the STL file? Here it is:
+  <p class="margin">   </p>
+
 <a href="./cat_bowl.stl" download="cat_bowl.stl" class="download-btn">
   Download STL File
 </a>
+<p class="margin">   </p>
+Want the Fusion 360 project file too? Download it here:
+<p class="margin">   </p>
+<a href="./cat_bowl.f3d" download="cat_bowl.f3d" class="download-btn">
+  Download Fusion 360 File (.f3d)
+</a>
+<p class="margin">   </p>
+If you want the G-code for direct printing, download it here:
 
+<p class="margin">   </p>
+<a href="./cat_bowl.gcode" download="cat_bowl.gcode" class="download-btn">
+  Download G-code File
+</a>
 
+<p class="margin">   </p>
+
+<h3 id="assignment-scan">Assignment: Scan something using a photogrammetry, LIDAR, or other application</h3>
+
+Okay so I just downloaded this app: 
 
 
 
