ohhh yeah. adding indexes!

--- a/02_2Ddesign/index.html
+++ b/02_2Ddesign/index.html
@@ -31,21 +31,23 @@
        <br>Week 2: 2D Design & Cutting.
       </h2>
   </div>
+   <div class="index-links">
+    <h4>index!</h4>
+    <ul>
+      <li><a href="#assignment-box">Assignment 1: I've Made a Box!</a></li>
+      <li><a href="#assignment-tutorial">Assignment 2: Fusion 360 Tutorial</a></li>
+      <li><a href="#assignment-modeling">Assignment 3: Fusion Modeling</a></li>
+    </ul>
+  </div>
 </nav>
 
 <body>
 <xmp style="display:none;">
 <div class="textcontainer">
 <p class="margin">   </p>
-
-<p class="margin">   </p>
-<div class="flexrow">
-  <a id="btn" href="./temp.zip" download>Test Download Button
-  </a>
-</div>
 <p class="margin">   </p>
 
-<h3>Assignment 1: I've made a box!</h3> 
+ <h3 id="assignment-box">Assignment 1: I've Made a Box!</h3>
 <h4>
 
 This is the box: 
@@ -93,7 +95,9 @@ Now I'm just going to show a bunch of pictures of my process:
 
 <p class="margin">   </p>
 
-<h3>Assignment 2: Fusion 360 Tutorial</h3>
+<h3 id="assignment-tutorial">Assignment 2: Fusion 360 Tutorial</h3>
+
+<h4>
 
 <p class="margin">   </p>
 
@@ -102,16 +106,18 @@ Here is what I made by following the tutorial:
 
 <p class="margin">   </p>
 
-<h3>Assignment 3: Fusion Modeling</h3>
+<h3 id="assignment-modeling">Assignment 3: Fusion Modeling</h3>
 
 <p class="margin">   </p>
-
+<h4>
 I've made a screw:
 <img src="./ScrewPicture.jpg" alt="screw loose" class="screw-pic">
 
 <p class="margin">   </p>
+<h4>
 
 I also made a glass from my hotel room: 
+<p class="margin">   </p>
 
 <iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991365605" height="510" width="450" frameborder="0" scrolling="no" ></iframe>
 
