--- a/04_microcontroller/index.html
+++ b/04_microcontroller/index.html
@@ -39,7 +39,7 @@
 <p class="margin">   </p>
 
 
-<h3>[Do Something with an arduino]</h3>
+<h3>Doing Something with an arduino</h3>
 
 <p class="margin">   </p>
 <h4>
@@ -86,6 +86,7 @@ void loop() {
 <p class="margin">   </p>
 
 Here is my Circuit Schematic: 
+<p class="margin">   </p>
 
 <iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991386220" height="343" width="345" frameborder="0" scrolling="no" ></iframe>
 
