--- a/05_3Ddesign/index.html
+++ b/05_3Ddesign/index.html
@@ -156,7 +156,72 @@ If you want the G-code for direct printing, download it here:
 
 <h3 id="assignment-scan">Assignment: Scan something using a photogrammetry, LIDAR, or other application</h3>
 
+<h4>
+<p class="margin">   </p>
 Okay so I just downloaded this app: 
+<p class="margin">   </p>
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991386699" height="847" width="345" frameborder="0" scrolling="no" ></iframe>
+<p class="margin">   </p>
+and it seems promising! 
+<p class="margin">   </p>
+I'm currently in a hotel room so I'm photogammetring what I've got: 
+
+<p class="margin">   </p>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991386700" height="560" width="345" frameborder="0" scrolling="no" ></iframe>
+
+<p class="margin">   </p>
+
+This coffee cup. 
+
+<p class="margin">   </p>
+
+It prompted me to take 100-200 photos of this cup from all angles, and this is the loading and processing screen: 
+
+<p class="margin">   </p>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991386703" height="847" width="345" frameborder="0" scrolling="no" ></iframe>
+
+<p class="margin">   </p>
+
+The first time, I did it and I think I turned the camera upside down too many times! 
+
+<p class="margin">   </p>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991386694" height="847" width="345" frameborder="0" scrolling="no" ></iframe>
+
+<p class="margin">   </p>
+
+But Finally I put it on this table so I could walk all the way around it: 
+
+<p class="margin">   </p>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991386772" height="560" width="345" frameborder="0" scrolling="no" ></iframe>
+
+<p class="margin">   </p>
+
+And it captured so much more than i was expecting it to but it worked!!!
+
+<p class="margin">   </p>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991386741" height="714" width="345" frameborder="0" scrolling="no" ></iframe>
+
+<p class="margin">   </p>
+
+here's me using their special crop tool: 
+
+<p class="margin">   </p>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991386847" height="847" width="345" frameborder="0" scrolling="no" ></iframe>
+
+<p class="margin">   </p>
+
+And the final product!!
+
+<p class="margin">   </p>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991386880" height="714" width="345" frameborder="0" scrolling="no" ></iframe>
+
 
 
 
