--- a/08_cnc/index.html
+++ b/08_cnc/index.html
@@ -30,6 +30,14 @@
        <br>Week 8: CNC Milling
       </h2>
   </div>
+
+    <div class="index-links">
+    <h4>index!</h4>
+    <ul>
+      <li><a href="#assignment-cnc">Assignment: Make Something With CNC</a></li>
+      <li><a href="#post-processing">Post Processing</a></li>
+    </ul>
+  </div>
 </nav>
 
 <body>
@@ -37,7 +45,7 @@
 <div class="textcontainer">
 <p class="margin">   </p>
 
-<h3>Assignment: Make Something With CNC</h3>
+ <h3 id="assignment-cnc">Assignment: Make Something With CNC</h3>
 
 
  <p class = "margin"></p>
@@ -86,7 +94,7 @@ The next steps would be to sand and stain it, and then add metal clamp!
 
  <p class = "margin"></p>
 
-<h3> Post Processing </h3>
+<h3 id="post-processing">Post Processing</h3>
 
 <h4> 
  <p class = "margin"></p>
