--- a/13_finalproject/index.html
+++ b/13_finalproject/index.html
@@ -30,6 +30,14 @@
        <br>Final Project: Drawing Machine.
       </h2>
   </div>
+  <div class="index-links">
+    <h4>Quick Navigation</h4>
+    <ul>
+      <li><a href="#see-project">See My Final Project</a></li>
+      <li><a href="#photos-videos">Photos and Videos</a></li>
+      <li><a href="#code-iterations">Code Iterations</a></li>
+    </ul>
+  </div>
 </nav>
 
 <body>
@@ -37,7 +45,28 @@
 <div class="textcontainer">
 <p class="margin"></p>
 
-<h3>Here are all of my photos and videos in order: </h3>
+<h3 id="see-project">See My Final Project</h3>
+
+<p class="margin"></p>
+  <h4> I made a drawing machine that relies on your computer's arrow keys to draw! Here are final product pictures and videos:
+
+    <p class="margin"></p>
+
+  <iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991388381" height="714" width="345" frameborder="0" scrolling="no" ></iframe>
+
+  <p class="margin"></p>
+
+  <iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991370016" height="415" width="236" frameborder="0" scrolling="no" ></iframe>
+
+  <iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991370014" height="415" width="236" frameborder="0" scrolling="no" ></iframe>
+
+  <iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991370002" height="415" width="236" frameborder="0" scrolling="no" ></iframe>
+
+  <iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991370001" height="415" width="236" frameborder="0" scrolling="no" ></iframe>
+
+<p class="margin"></p>
+
+<h3 id="photos-videos">Here are the photos from the making process</h3>
 
 <h4>
 
@@ -161,6 +190,8 @@ Final setup for presentation day!
 
 <iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991370015" height="560" width="345" frameborder="0" scrolling="no" ></iframe>
 
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991388272" height="714" width="345" frameborder="0" scrolling="no" ></iframe>
+
 
 <p class="margin"></p>
 
@@ -175,7 +206,7 @@ Drawing made with the machine:
 
 
 <p class="margin"></p>
-<h3>Here is all of my iterations of code: </h3>
+   <h3 id="code-iterations">Here are the iterations of my code</h3>
 
 <h4>
 
@@ -742,7 +773,7 @@ void loop() {
  <h4>
   <p class="margin"></p>
 
-This code is similar to the last one but is specialized for microstepping and faster reaction time from each button press:
+  <h4> This code is similar to the last one but is specialized for microstepping and faster reaction time from each button press:
 <p class="margin"></p>
 
 <div class="scrollable-container">
