okay for week 9!

--- a/10_machine/index.html
+++ b/10_machine/index.html
@@ -51,6 +51,12 @@
   Your browser does not support the video tag.
 </video>
 
+Here is the link to my pinterest board for this week. I might add more captions later, but for now I want to make sure I make the deadline: 
+
+
+https://www.pinterest.com/aiojukwu/ps70-machine-building-week/
+
+
 okay so here I'm adding in a bunch of blocks of code that I wil add captions to later: 
 
  <pre><code class="language-cpp">  
